sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:5: error: reassignment to val
    n = 1
      ^AlgBubbleSort1:9: error: reassignment to val
        n=0
         ^