sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  val n = 0
  while (n==0) {
    n = 1
    for (i<- 0 to getValueCount() -2) {
      if (isSmaller(i+1,i)) {
        swap(i,i+1)
        n=0
      }
    }
  }
}